RewardsPackage/force-app/main/default/objects/Rewards_Event_Link__c/Rewards_Event_Link__c.object-meta.xml
<CustomObject>
    <description>Creates a many-to-many relationship between Rewards Events and other Rewards Events. Links redemptions to the awarded points that were used and links expirations to the awarded points that are expiring.</description>
    <label>Rewards Event Link</label>
    <nameField>
        <displayFormat>REL-{0000000}</displayFormat>
        <label>Rewards Event Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rewards Event Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>