RewardsPackage/force-app/main/default/objects/Rewards_Event_Link__c/fields/Award_Event__c.field-meta.xml
<CustomField>
    <fullName>Award_Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Award-type Rewards Event that points are being taken from</description>
    <inlineHelpText>The Award-type Rewards Event that points are being taken from</inlineHelpText>
    <label>Award Event</label>
    <referenceTo>Rewards_Event__c</referenceTo>
    <relationshipLabel>Deduction Events</relationshipLabel>
    <relationshipName>Deduction_Event_Links</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>