RewardsPackage/force-app/main/default/objects/Rewards_Event_Link__c/fields/Deduction_Event__c.field-meta.xml
<CustomField>
    <fullName>Deduction_Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Redemption or Expiration-type Rewards Event that points are being used towards</description>
    <inlineHelpText>The Redemption or Expiration-type Rewards Event that points are being used towards</inlineHelpText>
    <label>Deduction Event</label>
    <referenceTo>Rewards_Event__c</referenceTo>
    <relationshipLabel>Award Events</relationshipLabel>
    <relationshipName>Award_Event_Links</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>