RewardsPackage/force-app/main/default/objects/Rewards_Event_Link__c/fields/Points_Used__c.field-meta.xml
<CustomField>
    <fullName>Points_Used__c</fullName>
    <description>The amount of points taken from the Award Event and applied to the Deduction Event</description>
    <inlineHelpText>The amount of points taken from the Award Event and applied to the Deduction Event</inlineHelpText>
    <label>Points Used</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>