RewardsPackage/force-app/main/default/objects/Rewards_Event_Link__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Award_Event__c</columns>
    <columns>Deduction_Event__c</columns>
    <columns>Points_Used__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>